# AutoWorker

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
include/autoworker/: autoworker.hpp  echo_node.hpp  work_context.hpp  worker_node.hpp
src/: echo_node.cpp  main.cpp  work_context.cpp
src/main/java/dev/sorn/autoworker/: AutoWorkerApplication.java  Envelope.java  Graph.java  GraphNode.java  Id.java  Node.java  Require.java  Value.java  Worker.java
src/test/java/dev/sorn/autoworker/: AutoWorkerApplicationTest.java  EnvelopeTest.java  GraphNodeTest.java  GraphTest.java  IdTest.java  NodeTest.java  ValueTest.java
src/testFixtures/java/dev/sorn/autoworker/: EnvelopeTestData.java  GraphTestData.java  NodeTestData.java  ValueTestData.java
tests/: test_autoworker.cpp  test_echo_node.cpp  test_work_context.cpp
